{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 132,
  "lineage": "7c7e0b76-2c8d-5d02-5c51-5cb2b5f79ffe",
  "resources": [
    {
      "module": "module.s3_mount",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu_s3_mounter",
      "provider": "module.s3_mount.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:194722429310:instance/i-04b6814a569902156",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ubuntu_ec2_s3_profile",
            "id": "i-04b6814a569902156",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_login",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ae77ef78b9a5f652"
              }
            ],
            "primary_network_interface_id": "eni-0ae77ef78b9a5f652",
            "private_dns": "ip-10-0-1-31.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-35-154-35-156.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.35.156",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0db5237af0d92e6e8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b13f29e3616999e7",
            "tags": {
              "Name": "Ubuntu-S3-Mounter"
            },
            "tags_all": {
              "Name": "Ubuntu-S3-Mounter"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d278b41a9301387b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722429310",
            "id": "i-04b6814a569902156",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.s3_mount.aws_iam_instance_profile.ec2_profile",
            "module.s3_mount.aws_iam_role.ec2_s3_role",
            "module.s3_mount.aws_s3_bucket.tf-iams3-bucket",
            "module.vpc.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194722429310:internet-gateway/igw-09e127f3d7885ebfb",
            "id": "igw-09e127f3d7885ebfb",
            "owner_id": "194722429310",
            "region": "ap-south-1",
            "tags": {
              "name": "custom-igw"
            },
            "tags_all": {
              "name": "custom-igw"
            },
            "vpc_id": "vpc-0a8a6a4dcf0558810"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194722429310:route-table/rtb-02f06b3aa895cfb42",
            "id": "rtb-02f06b3aa895cfb42",
            "owner_id": "194722429310",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e127f3d7885ebfb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public-rt"
            },
            "tags_all": {
              "name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a6a4dcf0558810"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722429310",
            "id": "rtb-02f06b3aa895cfb42",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9abe893e05eae2c",
            "region": "ap-south-1",
            "route_table_id": "rtb-02f06b3aa895cfb42",
            "subnet_id": "subnet-0b13f29e3616999e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194722429310:security-group/sg-0d278b41a9301387b",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d278b41a9301387b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ubuntu_ec2_sg",
            "name_prefix": "",
            "owner_id": "194722429310",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8a6a4dcf0558810"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722429310",
            "id": "sg-0d278b41a9301387b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194722429310:subnet/subnet-0b13f29e3616999e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b13f29e3616999e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "194722429310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "name": "public-subnet"
            },
            "tags_all": {
              "name": "public-subnet"
            },
            "vpc_id": "vpc-0a8a6a4dcf0558810"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722429310",
            "id": "subnet-0b13f29e3616999e7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:194722429310:vpc/vpc-0a8a6a4dcf0558810",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074a706b1d54169d9",
            "default_route_table_id": "rtb-0a975a9cc18db09e6",
            "default_security_group_id": "sg-09b16a23923a2111d",
            "dhcp_options_id": "dopt-0e77c3fe780b75e20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8a6a4dcf0558810",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a975a9cc18db09e6",
            "owner_id": "194722429310",
            "region": "ap-south-1",
            "tags": {
              "name": "custom-vpc"
            },
            "tags_all": {
              "name": "custom-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "194722429310",
            "id": "vpc-0a8a6a4dcf0558810",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}